--- a/templates/diagnosis-translation-add.html
+++ b/templates/diagnosis-translation-add.html
@@ -224,7 +224,7 @@
 										</div>
 										<div style="padding: 10px;">
                       <label>
-                        <input type="checkbox" ng-click="selectAllFilteredDiagnoses()"> Select All
+                        <input type="checkbox" ng-click="selectAllFilteredDiagnoses()" ng-checked="selectAll"> Select All
                       </label>
                     </div>
 										<div class="btn-group btn-group-justified">
