--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
       <div class="clearfix">
         <!-- SECTION: Logo -->
         <div class="row">
-          <div class="col-lg-12">
+          <div class="col-xs-12">
             <div class="home-header">
               <div class="logo">
                 <img class="animated rotateIn" src="images/opal_logo_transparent_purple.png" height="120" width="120">
@@ -14,9 +14,9 @@
         </div>    
         <div class="row" >
           <!-- Publishing tools -->
-					<div class="col-md-6" ng-if="isAuthorized([userRoles.admin])">
+					<div class="col-xs-12 col-md-6" ng-if="isAuthorized([userRoles.admin])">
 						<div class="row">
-							<div class="col-md-12">
+							<div class="col-xs-12">
 								<div class="home-side-menu" style="margin-top:20px; margin-bottom:20px">
 									<span class="fa fa-dot-circle-o"></span>
 									<span class="title">Publishing Tools</span>
@@ -26,7 +26,7 @@
 
             <!-- SECTION: Tasks/Appointments/Documents -->
 						<div class="row animated fadeIn" style="padding: 0 20px 0 20px">
-							<div class="col-md-6">
+							<div class="col-sm-6">
 								<div class="panel-container animated" ng-class="{pulse: hoverAliasMenu}" ng-mouseenter="hoverAliasMenu=true" ng-mouseleave="hoverAliasMenu=false" style="cursor:pointer;" ng-click="goToAlias()">
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
@@ -45,7 +45,7 @@
               </div>
               
               <!-- SECTION: Posts -->
-							<div class="col-md-6">
+							<div class="col-sm-6">
 								<div class="panel-container animated" ng-class="{pulse: hoverPostMenu}" ng-mouseenter="hoverPostMenu=true" ng-mouseleave="hoverPostMenu=false" style="cursor:pointer;" ng-click="goToPost()">
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
@@ -64,7 +64,7 @@
               </div>
               
               <!-- SECTION: Eductional material -->
-							<div class="col-md-6">
+							<div class="col-sm-6">
 								<div class="panel-container animated" ng-class="{pulse: hoverEduMatMenu}" ng-mouseenter="hoverEduMatMenu=true" ng-mouseleave="hoverEduMatMenu=false" style="cursor:pointer;" ng-click="goToEducationalMaterial()">
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
@@ -83,7 +83,7 @@
               </div> 
               
               <!-- SECTION: Hospital maps -->
-							<div class="col-md-6">
+							<div class="col-sm-6">
 								<div class="panel-container animated" ng-class="{pulse: hoverHosMapMenu}" ng-mouseenter="hoverHosMapMenu=true" ng-mouseleave="hoverHosMapMenu=false" style="cursor:pointer;" ng-click="goToHospitalMap()">
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
@@ -102,7 +102,7 @@
               </div>
               
               <!-- SECTION: Notifications -->
-							<div class="col-md-6">
+							<div class="col-sm-6">
 								<div class="panel-container animated" ng-class="{pulse: hoverNotificationMenu}" ng-mouseenter="hoverNotificationMenu=true" ng-mouseleave="hoverNotificationMenu=false" style="cursor:pointer;" ng-click="goToNotification()">
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
@@ -121,7 +121,7 @@
               </div>
               
               <!-- SECTION: Test results -->
-							<div class="col-md-6">
+							<div class="col-sm-6">
 								<div class="panel-container animated" ng-class="{pulse: hoverTestResultMenu}" ng-mouseenter="hoverTestResultMenu=true" ng-mouseleave="hoverTestResultMenu=false" style="cursor:pointer;" ng-click="goToTestResult()">
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
@@ -140,7 +140,7 @@
               </div>
               
               <!-- SECTION: Questionnaires -->
-							<div class="col-md-6">
+							<div class="col-sm-6">
 								<div class="panel-container animated" ng-class="{pulse: hoverQuestionnaireMenu}" ng-mouseenter="hoverQuestionnaireMenu=true" ng-mouseleave="hoverQuestionnaireMenu=false" style="cursor:pointer;" ng-click="goToQuestionnaireMainMenu()">
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
@@ -159,7 +159,7 @@
               </div>
               
               <!-- SECTION: Email -->
-							<div class="col-md-6">
+							<div class="col-sm-6">
 								<div class="panel-container animated" ng-class="{pulse: hoverEmailMenu}" ng-mouseenter="hoverEmailMenu=true" ng-mouseleave="hoverEmailMenu=false" style="cursor:pointer;" ng-click="goToEmail()">
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
@@ -178,7 +178,7 @@
 							</div> 
 
 							 <!-- SECTION: Legacy Questionnaire -->
-							<div class="col-md-6">
+							<div class="col-sm-6">
 								<div class="panel-container animated" ng-class="{pulse: hoverLegacyQuestionnaireMenu}" ng-mouseenter="hoverLegacyQuestionnaireMenu=true" ng-mouseleave="hoverLegacyQuestionnaireMenu=false" style="cursor:pointer;" ng-click="goToLegacyQuestionnaire()">
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
@@ -200,9 +200,9 @@
           </div>
 
           <!-- Administration tools -->
-					<div class="col-md-6" ng-if="isAuthorized([userRoles.admin, userRoles.registrant])">
+					<div class="col-xs-12 col-md-6" ng-if="isAuthorized([userRoles.admin, userRoles.registrant])">
         		<div class="row">
-          		<div class="col-md-12">
+          		<div class="col-xs-12">
 								<div class="home-side-menu" style="margin-top:20px; margin-bottom:20px">
 									<span class="fa fa-dot-circle-o"></span>
 									<span class="title">Administration</span>
@@ -212,7 +212,7 @@
 						<div class="row animated fadeIn" style="padding: 0 20px 0 20px">
 
 							<!-- SECTION: Diagnosis translation control -->
-							<div class="col-md-6" ng-if="isAuthorized([userRoles.admin])">
+							<div class="col-sm-6" ng-if="isAuthorized([userRoles.admin])">
 								<div class="panel-container animated" ng-class="{pulse: hoverDiagnosisMenu}" ng-mouseenter="hoverDiagnosisMenu=true" ng-mouseleave="hoverDiagnosisMenu=false" style="cursor:pointer;" ng-click="goToDiagnosisTranslation()">
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
@@ -231,7 +231,7 @@
               </div>
 
               <!-- SECTION: Cron control -->
-							<div class="col-md-6" ng-if="isAuthorized([userRoles.admin])">
+							<div class="col-xs-6" ng-if="isAuthorized([userRoles.admin])">
 								<div class="panel-container animated" ng-class="{pulse: hoverCronMenu}" ng-mouseenter="hoverCronMenu=true" ng-mouseleave="hoverCronMenu=false" style="cursor:pointer;" ng-click="goToCron()">
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
@@ -250,7 +250,7 @@
               </div>
               
               <!-- SECTION: Patient -->
-							<div class="col-md-6" ng-if="isAuthorized([userRoles.admin])">
+							<div class="col-xs-6" ng-if="isAuthorized([userRoles.admin])">
 								<div class="panel-container animated" ng-class="{pulse: hoverPatientMenu}" ng-mouseenter="hoverPatientMenu=true" ng-mouseleave="hoverPatientMenu=false" style="cursor:pointer;" ng-click="goToPatient()">
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
@@ -269,7 +269,7 @@
               </div>
               
               <!-- SECTION: Patient registration -->
-							<div class="col-md-6" ng-if="isAuthorized([userRoles.admin, userRoles.registrant])">
+							<div class="col-xs-6" ng-if="isAuthorized([userRoles.admin, userRoles.registrant])">
 								<div class="panel-container animated" ng-class="{pulse: hoverPatRegMenu}" ng-mouseenter="hoverPatRegMenu=true" ng-mouseleave="hoverPatRegMenu=false" style="cursor:pointer;" ng-click="goToPatientRegistration()">
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
@@ -288,7 +288,7 @@
               </div>
               
               <!-- SECTION: Patient registration -->
-							<div class="col-md-6" ng-if="isAuthorized([userRoles.admin])">
+							<div class="col-xs-6" ng-if="isAuthorized([userRoles.admin])">
 								<div class="panel-container animated" ng-class="{pulse: hoverPatActivityMenu}" ng-mouseenter="hoverPatActivityMenu=true" ng-mouseleave="hoverPatActivityMenu=false" style="cursor:pointer;" ng-click="goToPatientActivity()">
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
@@ -307,7 +307,7 @@
               </div>
               
               <!-- SECTION: Users -->
-							<div class="col-md-6" ng-if="isAuthorized([userRoles.admin])">
+							<div class="col-xs-6" ng-if="isAuthorized([userRoles.admin])">
 								<div class="panel-container animated" ng-class="{pulse: hoverUserMenu}" ng-mouseenter="hoverUserMenu=true" ng-mouseleave="hoverUserMenu=false" style="cursor:pointer;" ng-click="goToUsers()">
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
@@ -328,9 +328,9 @@
           </div>
 
           <!-- Profile tools -->
-					<div class="col-md-6">
+					<div class="col-xs-12 col-md-6">
 						<div class="row">
-							<div class="col-md-12">
+							<div class="col-xs-12">
 								<div class="home-side-menu" style="margin-top:20px; margin-bottom:20px">
 									<span class="fa fa-dot-circle-o"></span>
 									<span class="title">Profile</span>
@@ -340,7 +340,7 @@
 						<div class="row animated fadeIn" style="padding: 0 20px 0 20px">
 
               <!-- SECTION: Account settings -->
-							<div class="col-md-6">
+							<div class="col-xs-6">
 								<div class="panel-container animated" ng-class="{pulse: hoverAccountMenu}" ng-mouseenter="hoverAccountMenu=true" ng-mouseleave="hoverAccountMenu=false" style="cursor:pointer;" ng-click="goToAccount()">
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
@@ -359,7 +359,7 @@
               </div>
               
               <!-- SECTION: Logout -->
-							<div class="col-md-6">
+							<div class="col-xs-6">
 								<div class="panel-container animated" ng-class="{pulse: hoverLogoutMenu}" ng-mouseenter="hoverLogoutMenu=true" ng-mouseleave="hoverLogoutMenu=false" style="cursor:pointer;" ng-click="goToLogout()">
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
