--- a/templates/login.html
+++ b/templates/login.html
@@ -1,15 +1,16 @@
   <div id="main" class="gradient-bg" style="height: 100%">
     <div class="login-container">
-      <div class="col-md-9">
-        <div class="row" style="display:flex; align-items:flex-end">
+      <div class="col-xs-12 col-lg-10">
+        <div class="row flex">
           <!-- Opal title -->
-          <div class="col-md-5 col-md-offset-3" style="text-align:right;">
-            <h1 class="animated flipInX" style="font-size: 55px;">
-              opal <strong>ADMIN</strong> <span style="font-size: 30px;" ng-if="devMode">DEV</span>
+          <div class="col-xs-12 col-md-offset-3 col-md-6 col-lg-6 col-lg-offset-2 title-login">
+            <h1 class="animated flipInX">
+              opal <strong>ADMIN</strong>
             </h1>
+            <!-- <span class="col-lg-0" style="font-size: 35px;" ng-if="devMode">DEV</span> -->
           </div>
           <!-- Logo -->
-          <div class="col-md-5">
+          <div class="col-xs-10 col-xs-offset-1 col-md-6 col-md-offset-3 col-lg-offset-0 col-lg-6">
             <div class="circle animated form-box-shake" style="z-index:0; box-shadow:rgba(0, 0, 0, 0.6) 0px 3px 6px -3px;" ng-class="{'pulse': !formLoaded}"></div>
             <div class="circle animated form-box-shake" ng-class="{'pulse': !formLoaded}" >
               <img class="animated rotateIn" src="images/opal_logo_transparent_purple.png" height="100" width="100">
