--- Added navbar for mobile view     --- Redesigning for mobile/tablet support

--- a/templates/side-panel-menu.html
+++ b/templates/side-panel-menu.html
@@ -1,4 +1,4 @@
-          <div ng-controller="sidePanelMenuController">
+          <div class="side-navbar" ng-controller="navigationController" >
             <!-- Logo and title -->
             <div class="row side-logo" ng-click="goToHome()">
               <div class="col-md-12">
@@ -262,5 +262,4 @@
             </div>
             <div id="gradient"></div>
           </div>
-        </div> 
 
