--- a/css/style.css
+++ b/css/style.css
@@ -435,6 +435,7 @@ body {
 
 #page {
   /*max-width: 1500px;*/
+  padding-top: 55px;
   margin: 0 auto;
   position: relative;
   height: 100%; }
@@ -586,10 +587,10 @@ ul.no-list {
 .mainPatientModal .modal-dialog,
 .studyModal .modal-dialog,
 .customModal .modal-dialog {
-  width: 70% !important; }
+  width: 98% !important; }
 
 .editUserModal .modal-dialog {
-  width: 50% !important;
+  width: 98% !important;
 }
 
 .customModal .modal-content,
@@ -756,17 +757,19 @@ ul.no-list {
 }
 
 .main-title {
-  height: 60px;
+  /*height: 60px;*/
 }
 
 .main-title .title-content {
-  font-size: 50px;
+  font-size: 27px;
+  margin-bottom: 10px;
 }
 
 .main-title .title-content h1 {
   display: inline-block;
   vertical-align: middle;
   margin: 0;
+  font-size: 24px;
 }
 
 .main-title .title-content span {
@@ -781,6 +784,7 @@ ul.no-list {
   text-align: right;
   font-size: 15px;
   padding-top: 15px;
+  display: none;
 }
 
 .title-breadcrumbs .teflon {
@@ -1308,6 +1312,146 @@ footer {
   font-size: 35px;
 }
 
+.main-menu .panel-description {
+  display: none;
+}
+
+.main-menu .panel-info {
+  height: 100px;
+}
+
+.main-menu .icon-home {
+  font-size: 50px;
+}
+
+.navbar-default {
+  background-color: #6f5499;
+  border-color: #3c2560;
+  width: 100%;
+}
+.navbar-default .navbar-brand {
+  color: #ecf0f1;
+}
+.navbar-default .navbar-brand:hover,
+.navbar-default .navbar-brand:focus {
+  color: #fffff4;
+}
+.navbar-default .navbar-text {
+  color: #ecf0f1;
+  font-size: 18px;
+}
+.navbar-default .navbar-nav > li > a {
+  color: #ecf0f1;
+}
+.navbar-default .navbar-nav > li > a:hover,
+.navbar-default .navbar-nav > li > a:focus {
+  color: #fffff4;
+}
+.navbar-default .navbar-nav > li > .dropdown-menu {
+  background-color: #6f5499;
+}
+.navbar-default .navbar-nav > li > .dropdown-menu > li > a {
+  color: #ecf0f1;
+}
+.navbar-default .navbar-nav > li > .dropdown-menu > li > a:hover,
+.navbar-default .navbar-nav > li > .dropdown-menu > li > a:focus {
+  color: #fffff4;
+  background-color: #3c2560;
+}
+.navbar-default .navbar-nav > li > .dropdown-menu > li.divider {
+  background-color: #3c2560;
+}
+.navbar-default .navbar-nav .open .dropdown-menu > .active > a,
+.navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
+.navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
+  color: #fffff4;
+  background-color: #3c2560;
+}
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus {
+  color: #fffff4;
+  background-color: #3c2560;
+}
+.navbar-default .navbar-nav > .open > a,
+.navbar-default .navbar-nav > .open > a:hover,
+.navbar-default .navbar-nav > .open > a:focus {
+  color: #fffff4;
+  background-color: #3c2560;
+}
+.navbar-default .navbar-toggle {
+  border-color: #fff;
+}
+.navbar-default .navbar-toggle:hover,
+.navbar-default .navbar-toggle:focus {
+  background-color: #3c2560;
+}
+.navbar-default .navbar-toggle .icon-bar {
+  background-color: #ecf0f1;
+}
+.navbar-default .navbar-collapse,
+.navbar-default .navbar-form {
+  border-color: #ecf0f1;
+}
+.navbar-default .navbar-link {
+  color: #ecf0f1;
+}
+.navbar-default .navbar-link:hover {
+  color: #fffff4;
+}
+
+.navbar-default .navbar-brand > img {
+  height: 45px;
+  width: 45px;
+  margin-top: -12px;
+}
+
+@media (max-width: 767px) {
+  .navbar-default .navbar-nav .open .dropdown-menu > li > a {
+    color: #ecf0f1;
+  }
+  .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
+  .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
+    color: #fffff4;
+  }
+  .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
+  .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
+  .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
+    color: #fffff4;
+    background-color: #3c2560;
+  }
+}
+
+.side-navbar {
+  display: none;
+}
+
+.modal-header .modal-title {
+  text-align: center;
+  font-weight: 700;
+}
+
+.modal-header .modal-title-caption {
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.modal-header .modal-buttons .submit {
+  float: left;
+  width: 120px;
+}
+
+.modal-header .modal-buttons .cancel {
+  float: right;
+  width: 120px;
+}
+
+.modal-content-current-description {
+  display: none;
+}
+
 /* 
  * Custom Styles for ngGrid
  */
@@ -1343,7 +1487,17 @@ footer {
     height: 140px;
   }
 
+  .main-menu .panel-description {
+    display: block;
+  }
   
+  .main-menu .panel-info {
+    height: 180px;
+  }
+
+  .main-menu .icon-home {
+    font-size: 50px;
+  }
 }
 
 @media only screen and (min-width:768px) {
@@ -1377,6 +1531,28 @@ footer {
   }
   .title-login h1 {
     font-size: 55px;
+  }
+
+  .navbar {
+    display: none;
+  }
+
+  .side-navbar {
+    display: block;
+  }
+
+  #page {
+    padding-top: 0;
+  }
+
+  .patientModal .modal-dialog,
+  .mainPatientModal .modal-dialog,
+  .studyModal .modal-dialog,
+  .customModal .modal-dialog {
+    width: 70% !important; }
+
+  .editUserModal .modal-dialog {
+    width: 50% !important;
   }
 
 }
