--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,12 @@
   <div id="main">
-    <div id="top" class="home-main" ng-controller="sidePanelMenuController">
+    <div id="top" class="home-main">
       <div class="clearfix">
         <!-- SECTION: Logo -->
         <div class="row">
+        	<!-- Load side menu -->
+          <div id="side-panel-scrollbar" class="col-md-2">
+            <div ng-include="'templates/side-panel-menu.html'"></div>
+          </div>
           <div class="col-xs-12">
             <div class="home-header">
               <div class="logo">
@@ -26,8 +30,8 @@
 
             <!-- SECTION: Tasks/Appointments/Documents -->
 						<div class="row animated fadeIn" style="padding: 0 20px 0 20px">
-							<div class="col-sm-6">
-								<div class="panel-container animated" ng-class="{pulse: hoverAliasMenu}" ng-mouseenter="hoverAliasMenu=true" ng-mouseleave="hoverAliasMenu=false" style="cursor:pointer;" ng-click="goToAlias()">
+							<div class="col-xs-6">
+								<div class="main-menu panel-container animated" ng-class="{pulse: hoverAliasMenu}" ng-mouseenter="hoverAliasMenu=true" ng-mouseleave="hoverAliasMenu=false" style="cursor:pointer;" ng-click="goToAlias()">
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
 											<div class="icon-home clearfix">
@@ -45,7 +49,7 @@
               </div>
               
               <!-- SECTION: Posts -->
-							<div class="col-sm-6">
+							<div class="col-xs-6">
 								<div class="panel-container animated" ng-class="{pulse: hoverPostMenu}" ng-mouseenter="hoverPostMenu=true" ng-mouseleave="hoverPostMenu=false" style="cursor:pointer;" ng-click="goToPost()">
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
@@ -64,7 +68,7 @@
               </div>
               
               <!-- SECTION: Eductional material -->
-							<div class="col-sm-6">
+							<div class="col-xs-6">
 								<div class="panel-container animated" ng-class="{pulse: hoverEduMatMenu}" ng-mouseenter="hoverEduMatMenu=true" ng-mouseleave="hoverEduMatMenu=false" style="cursor:pointer;" ng-click="goToEducationalMaterial()">
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
@@ -83,7 +87,7 @@
               </div> 
               
               <!-- SECTION: Hospital maps -->
-							<div class="col-sm-6">
+							<div class="col-xs-6">
 								<div class="panel-container animated" ng-class="{pulse: hoverHosMapMenu}" ng-mouseenter="hoverHosMapMenu=true" ng-mouseleave="hoverHosMapMenu=false" style="cursor:pointer;" ng-click="goToHospitalMap()">
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
@@ -102,7 +106,7 @@
               </div>
               
               <!-- SECTION: Notifications -->
-							<div class="col-sm-6">
+							<div class="col-xs-6">
 								<div class="panel-container animated" ng-class="{pulse: hoverNotificationMenu}" ng-mouseenter="hoverNotificationMenu=true" ng-mouseleave="hoverNotificationMenu=false" style="cursor:pointer;" ng-click="goToNotification()">
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
@@ -121,7 +125,7 @@
               </div>
               
               <!-- SECTION: Test results -->
-							<div class="col-sm-6">
+							<div class="col-xs-6">
 								<div class="panel-container animated" ng-class="{pulse: hoverTestResultMenu}" ng-mouseenter="hoverTestResultMenu=true" ng-mouseleave="hoverTestResultMenu=false" style="cursor:pointer;" ng-click="goToTestResult()">
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
@@ -140,7 +144,7 @@
               </div>
               
               <!-- SECTION: Questionnaires -->
-							<div class="col-sm-6">
+							<div class="col-xs-6">
 								<div class="panel-container animated" ng-class="{pulse: hoverQuestionnaireMenu}" ng-mouseenter="hoverQuestionnaireMenu=true" ng-mouseleave="hoverQuestionnaireMenu=false" style="cursor:pointer;" ng-click="goToQuestionnaireMainMenu()">
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
@@ -159,7 +163,7 @@
               </div>
               
               <!-- SECTION: Email -->
-							<div class="col-sm-6">
+							<div class="col-xs-6">
 								<div class="panel-container animated" ng-class="{pulse: hoverEmailMenu}" ng-mouseenter="hoverEmailMenu=true" ng-mouseleave="hoverEmailMenu=false" style="cursor:pointer;" ng-click="goToEmail()">
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
@@ -178,7 +182,7 @@
 							</div> 
 
 							 <!-- SECTION: Legacy Questionnaire -->
-							<div class="col-sm-6">
+							<div class="col-xs-6">
 								<div class="panel-container animated" ng-class="{pulse: hoverLegacyQuestionnaireMenu}" ng-mouseenter="hoverLegacyQuestionnaireMenu=true" ng-mouseleave="hoverLegacyQuestionnaireMenu=false" style="cursor:pointer;" ng-click="goToLegacyQuestionnaire()">
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
@@ -212,7 +216,7 @@
 						<div class="row animated fadeIn" style="padding: 0 20px 0 20px">
 
 							<!-- SECTION: Diagnosis translation control -->
-							<div class="col-sm-6" ng-if="isAuthorized([userRoles.admin])">
+							<div class="col-xs-6" ng-if="isAuthorized([userRoles.admin])">
 								<div class="panel-container animated" ng-class="{pulse: hoverDiagnosisMenu}" ng-mouseenter="hoverDiagnosisMenu=true" ng-mouseleave="hoverDiagnosisMenu=false" style="cursor:pointer;" ng-click="goToDiagnosisTranslation()">
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
